--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "dotenv": "^8.2.0",
       "graphql-yoga": "^1.18.3",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
