--- a/package.json
+++ b/package.json
@@ -6,21 +6,29 @@
       "@types/cors": "^2.8.6",
       "@types/morgan": "^1.9.1",
       "@types/node": "^8.0.29",
+      "gql2ts": "^1.10.1",
       "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "bcrypt": "^5.0.0",
+      "bcryptjs": "^2.4.3",
       "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express-session": "^1.17.1",
+      "graphql": "^15.1.0",
+      "graphql-import": "^1.0.2",
+      "graphql-tools": "^6.0.9",
       "graphql-yoga": "^1.18.3",
       "jsonwebtoken": "^8.5.1",
+      "merge-graphql-schemas": "^1.7.8",
       "morgan": "^1.10.0",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.25"
    },
    "scripts": {
-      "start": "nodemon --exec ts-node src/index.ts"
+      "start": "nodemon --exec ts-node src/index.ts",
+      "gen-schema-type": "gql2ts src/api/**/*.graphql -o src/types/**/*.schema.d.ts"
    }
 }
