--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "bcryptjs": "^2.4.3",
       "cors": "^2.8.5",
       "dotenv": "^8.2.0",
+      "express-mysql-session": "^2.1.4",
       "express-session": "^1.17.1",
       "graphql": "^15.1.0",
       "graphql-import": "^1.0.2",
