:tada:passport local

--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
    "version": "0.0.1",
    "description": "gaeguri",
    "devDependencies": {
+      "@types/bcrypt": "^3.0.0",
       "@types/cors": "^2.8.6",
       "@types/morgan": "^1.9.1",
       "@types/node": "^8.0.29",
+      "@types/passport": "^1.0.3",
+      "@types/passport-local": "^1.0.33",
       "gql2ts": "^1.10.1",
       "ts-node": "3.3.0",
       "typescript": "3.3.3333"
@@ -25,6 +28,8 @@
       "merge-graphql-schemas": "^1.7.8",
       "morgan": "^1.10.0",
       "mysql": "^2.14.1",
+      "passport": "^0.4.1",
+      "passport-local": "^1.0.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.25"
    },
