--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "devDependencies": {
       "@types/bcrypt": "^3.0.0",
       "@types/cors": "^2.8.6",
+      "@types/jsonwebtoken": "^8.5.0",
       "@types/morgan": "^1.9.1",
       "@types/node": "^8.0.29",
       "@types/passport": "^1.0.3",
@@ -29,6 +30,8 @@
       "morgan": "^1.10.0",
       "mysql": "^2.14.1",
       "passport": "^0.4.1",
+      "passport-google-oauth20": "^2.0.0",
+      "passport-jwt": "^4.0.0",
       "passport-local": "^1.0.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.25"
