--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
       "express-mysql-session": "^2.1.4",
       "express-session": "^1.17.1",
       "glob": "^7.1.6",
-      "graphql": "^15.1.0",
       "graphql-import": "^1.0.2",
       "graphql-middleware": "^4.0.2",
       "graphql-tools": "^6.0.9",
@@ -39,7 +38,10 @@
       "passport-local": "^1.0.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.25",
-      "typeorm-seeding": "^1.6.1" 
+      "typeorm-seeding": "^1.6.1"
+   },
+   "resolutions": {
+      "graphql": "^15.1.0"
    },
    "scripts": {
       "start": "nodemon --exec ts-node src/index.ts",
