--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
    },
    "scripts": {
       "start": "nodemon --exec ts-node src/index.ts",
-      "build" : "webpack",
       "gen-schema-type": "gql2ts src/api/**/*.graphql -o src/types/**/*.schema.d.ts",
       "type": "ts-node src/types/createTypes.ts",
       "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
@@ -56,6 +55,7 @@
       "heroku-cleanup": "echo This runs after Heroku prunes and caches dependencies."
    },
    "engines": {
-      "node": "10.x"
+      "node": "10.x",
+      "npm": "6.x"
     }
 }
