--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
    "devDependencies": {
       "@types/bcrypt": "^3.0.0",
       "@types/cors": "^2.8.6",
+      "@types/faker": "^4.1.12",
       "@types/glob": "^7.1.2",
       "@types/jsonwebtoken": "^8.5.0",
       "@types/morgan": "^1.9.1",
+      "@types/multer": "^1.4.3",
       "@types/node": "^8.0.29",
       "@types/passport": "^1.0.3",
       "@types/passport-local": "^1.0.33",
-      "@types/faker": "^4.1.12",
       "gql2ts": "^1.10.1",
       "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "@babel/preset-env": "^7.10.4",
       "bcrypt": "^5.0.0",
       "bcryptjs": "^2.4.3",
       "cors": "^2.8.5",
@@ -32,6 +34,7 @@
       "jsonwebtoken": "^8.5.1",
       "merge-graphql-schemas": "^1.7.8",
       "morgan": "^1.10.0",
+      "multer": "^1.4.2",
       "mysql": "^2.14.1",
       "nodemon": "^2.0.4",
       "passport": "^0.4.1",
@@ -53,9 +56,5 @@
       "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
       "deploy-development": "pm2 deploy ecosystem.config.js development --force",
       "reload-development": "pm2 deploy ecosystem.config.js development exec 'pm2 reload app'"
-   },
-   "engines": {
-      "node": "10.x",
-      "npm": "6.x"
    }
 }
