--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "graphql-yoga": "^1.18.3",
       "jsonwebtoken": "^8.5.1",
       "merge-graphql-schemas": "^1.7.8",
+      "moment": "^2.27.0",
       "morgan": "^1.10.0",
       "multer": "^1.4.2",
       "mysql": "^2.14.1",
